--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Arkii stuff or things or something
+title:            Arkii's stuff or things or something
 description:      I don't really know what this is going to be for :/
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
@@ -34,10 +34,8 @@ bing_verify:
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: Theme Setup
-    url: /theme-setup
-  - title: External Link
-    url: http://mademistakes.com
+  - title: Theme From
+    url: https://github.com/mmistakes/hpstr-jekyll-theme
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
